# PaperPeek

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/: multi_lm_dialogue.py  paper_to_speech.py
src/modules/: __init__.py  paper.py  session.py  speech.py
src/utils/: __init__.py  logging_utils.py
