[project]
name = "paperpeek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "langchain-community>=0.3.1",
    "langchain-openai>=0.2.2",
    "langchain>=0.3.2",
    "openai>=1.51.0",
]

[tool.uv]
dev-dependencies = [
    "isort>=5.13.2",
    "ruff>=0.6.8",
]
